--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.TravelPlan"
         tools:targetApi="31">
         <activity
-            android:name=".AddDayPlanActivity"
+            android:name=".Activity.AddDayPlanActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
 
@@ -22,19 +22,19 @@
             android:value="AIzaSyC5LQJO0WLpJ_pWFAesDMugTgzCvHhzkNM" />
 
         <activity
-            android:name=".SearchDestinationActivity"
+            android:name=".Search.SearchDestinationActivity"
             android:exported="false" />
         <activity
-            android:name=".PlanActivity"
+            android:name=".Activity.PlanActivity"
             android:exported="false" />
         <activity
-            android:name=".SearchActivity"
+            android:name=".Search.SearchActivity"
             android:exported="false" />
         <activity
-            android:name=".AddPlanActivity"
+            android:name=".Activity.AddPlanActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
